# CINECA-SCAI-HPC-courses

./: .gitignore  README.md
hpc-numerical-libraries-course/: CMakeLists.txt
hpc-numerical-libraries-course/petsc/: 1_petsc_hello.c  2_petsc_vec.c  3_petsc_mat.c  4_petsc_ksp_poisson.c  5_petsc_snes_poisson.c  CMakeLists.txt  README.md  makefile  petsc_load_env.sh  petsc_qsub_script.sh
hpc-numerical-libraries-course/petsc/1_petsc_hello/: CMakeLists.txt
hpc-numerical-libraries-course/petsc/1_petsc_hello/guided_example/: CMakeLists.txt  petsc_hello.c  petsc_qsub_script.sh
hpc-numerical-libraries-course/petsc/1_petsc_hello/solution_example/: 1_petsc_hello.c  CMakeLists.txt  makefile  petsc_hello.c  petsc_qsub_script.sh  petsc_qsub_script.sh.in
hpc-numerical-libraries-course/petsc/2_petsc_vec/: CMakeLists.txt
hpc-numerical-libraries-course/petsc/2_petsc_vec/guided_example/: CMakeLists.txt  makefile  petsc_qsub_script.sh  petsc_vec.c
hpc-numerical-libraries-course/petsc/2_petsc_vec/solution_example/: 2_petsc_vec.c  CMakeLists.txt  makefile  petsc_qsub_script.sh  petsc_qsub_script.sh.in  petsc_vec.c
hpc-numerical-libraries-course/petsc/3_petsc_mat/: CMakeLists.txt
hpc-numerical-libraries-course/petsc/3_petsc_mat/guided_example/: CMakeLists.txt  makefile  petsc_mat.c  petsc_qsub_script.sh
hpc-numerical-libraries-course/petsc/3_petsc_mat/solution_example/: 3_petsc_mat.c  CMakeLists.txt  makefile  petsc_mat.c  petsc_qsub_script.sh  petsc_qsub_script.sh.in
hpc-numerical-libraries-course/petsc/4_petsc_ksp_poisson/: CMakeLists.txt
hpc-numerical-libraries-course/petsc/4_petsc_ksp_poisson/guided_example/: CMakeLists.txt  makefile  petsc_ksp_poisson.c  petsc_qsub_script.sh  petsc_qsub_script.sh.in
hpc-numerical-libraries-course/petsc/4_petsc_ksp_poisson/solution_example/: CMakeLists.txt  makefile  petsc_ksp_poisson.c  petsc_qsub_script.sh  petsc_qsub_script.sh.in
hpc-numerical-libraries-course/petsc/5_petsc_snes_poisson/: CMakeLists.txt
hpc-numerical-libraries-course/petsc/5_petsc_snes_poisson/guided_example/: CMakeLists.txt  petsc_qsub_script.sh  petsc_snes_poisson.c
hpc-numerical-libraries-course/petsc/5_petsc_snes_poisson/solution_example/: CMakeLists.txt  makefile  petsc_qsub_script.sh  petsc_qsub_script.sh.in  petsc_snes_poisson.c
